STONEBLD-752 Add SCM info to rebuilt artifacts